--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "6.4.7 ",
     "@reduxjs/toolkit": "^2.6.1",
+    "tailwindcss": "^4.0.14",
     "@tanstack/react-table": "^8.0.0",
     "@tanstack/react-query": "^5.68.0",
     "@testing-library/dom": "^10.4.0",
