--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^1.8.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "6.4.7 ",
+    "@mui/material": "^6.4.7 ",
+    "@mui/icons-material": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
     "tailwindcss": "^4.0.14",
     "@tanstack/react-table": "^8.0.0",
